--- a/roadmap.html
+++ b/roadmap.html
@@ -4,7 +4,7 @@ title: "Roadmap"
 ---
 
 <div class="page">
-   <table  id="datasets">
+   <table  id="datasets"  class="responsive">
 	   <tr>
 		   <th>Data</th>
 		   <th>Description</th>
