added descriptive text to roadmap

--- a/roadmap.html
+++ b/roadmap.html
@@ -4,6 +4,10 @@ title: "Roadmap"
 ---
 
 <div class="page">
+<p>The City of Los Angeles benefits from the fact that in the past few years, other cities have experimented with open data, both opening up various datasets and engaging their communities to gauge response.</p>
+
+<p>Based on a robust analysis of the Open Data Ecosystem internationally, the Mayor’s Office has identified roughly 140 datasets (i.e. 2-5 sets per department) that are considered High Value. This list gives us insight as we explore what data sets are next for publication. The Mayor’s Office will be working with the department Open Data Coordinators for feedback on this list to finalize the Open Data Roadmap and seek to release all data identified within it by end of Q2.</p>
+
    <table  id="datasets"  class="responsive">
 	   <tr>
 		   <th>Data</th>
