added feedback mechanism

--- a/roadmap.html
+++ b/roadmap.html
@@ -8,6 +8,8 @@ title: "Roadmap"
 
 <p>Based on a robust analysis of the Open Data Ecosystem internationally, the Mayor’s Office has identified roughly 140 datasets (i.e. 2-5 sets per department) that are considered High Value. This list gives us insight as we explore what data sets are next for publication. The Mayor’s Office will be working with the department Open Data Coordinators for feedback on this list to finalize the Open Data Roadmap and seek to release all data identified within it by end of Q2.</p>
 
+<p><strong>Please share your feedback by emailing mayor.opendata@lacity.org or on twitter with #datala.</strong></p>
+
    <table  id="datasets"  class="responsive">
 	   <tr>
 		   <th>Data</th>
