--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<p>This document is organized into two high-level sections, detailing the City of Los Angeles Open Data Program: the <strong>strategic policy</strong>, featuring the why and how; and then the <strong>operational playbook</strong>, explaining in more detail which datasets to open and specifically how-to do so per best practices.</p>
+<p>As West Hollywood celebrates 30 years of cityhood, this inaugural City of West Hollywood Innovations Annual Report examines the City’s recent civic innovation programs and introduces new initiatives to enhance citizen satisfaction and engagement, increase government efficiency and transparency, and promote the City’s innovation economy.</p>
 
 
     {% assign pages_list = site.pages | sort:"url" %}
